fix: Down chevron positioning on mobile

--- a/pydata_roma_website/themes/roma/static/css/style.css
+++ b/pydata_roma_website/themes/roma/static/css/style.css
@@ -991,6 +991,10 @@ section {
     justify-content: center !important;
   }
 
+  .scroll-cue {
+    bottom: -2.2rem;
+  }
+
   .hero-tags {
     justify-content: center;
   }
